; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_module.c_unknown_module_param_cb.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_module.c_unknown_module_param_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"async_probe\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"%s: unknown parameter '%s' ignored\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*)* @unknown_module_param_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unknown_module_param_cb(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.module*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to %struct.module*
  store %struct.module* %13, %struct.module** %10, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @strcmp(i8* %14, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %4
  %18 = load %struct.module*, %struct.module** %10, align 8
  %19 = getelementptr inbounds %struct.module, %struct.module* %18, i32 0, i32 0
  store i32 1, i32* %19, align 4
  store i32 0, i32* %5, align 4
  br label %32

20:                                               ; preds = %4
  %21 = load i8*, i8** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @ddebug_dyndbg_module_param_cb(i8* %21, i8* %22, i8* %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %11, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %20
  %28 = load i8*, i8** %8, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @pr_warn(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i8* %28, i8* %29)
  br label %31

31:                                               ; preds = %27, %20
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %31, %17
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @ddebug_dyndbg_module_param_cb(i8*, i8*, i8*) #1

declare dso_local i32 @pr_warn(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
